# shopsystem-templates

./: .gitignore  CLAUDE.md  README.md  bc-manifest.yaml  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.claude/agents/: bc-implementer.md  bc-reviewer.md
.claude/canonical/: bc-primer.md
.claude/shop/: name.md
.github/workflows/: release.yml
.specstory/: .project.json
.specstory/history/: 2026-05-12_16-38-58Z-this-repo-is-part.md  2026-05-12_16-53-24Z-dispatch-available-work.md  2026-05-12_21-16-54Z-use-at-shopsystem-templates.md  2026-05-12_21-36-53Z-start-a-loop-to.md  2026-05-14_18-54-31Z-load-your-startup-instructions.md  2026-05-19_18-11-02Z.md  2026-05-19_18-17-39Z-read-your-instructions.md  2026-05-21_19-41-46Z-try-using-a-venv.md  2026-05-27_19-06-27Z-run-the-monitor.md  2026-05-27_21-20-12Z-please-read-your-instructions.md
docs/superpowers/plans/: 2026-06-03-bc-skills-v2-enforcement.md  2026-06-03-bc-superpowers-skills.md
docs/superpowers/specs/: 2026-06-03-bc-superpowers-skills-design.md
features/: bc_emit_work_done_plan_bead_closure.feature  bc_emit_work_done_plan_decomposition_durability.feature  bc_emit_work_done_retirement_removal.feature  bc_emit_work_done_wrapper.feature  bc_implementer_hash_recompute_verification.feature  bc_implementer_pre_emit_clean_tree_and_origin_main.feature  bc_implementer_sections.feature  bc_implementer_your_job_cli_naming.feature  bc_primer_between_item_autonomous_drain.feature  bc_primer_rearm_monitor_drain_after_work_item.feature  bc_reviewer_pre_emit_clean_tree_and_origin_main.feature  bc_reviewer_pre_emit_scenario_hash_integrity.feature  bc_reviewer_sections.feature  bc_reviewer_signoff_wrapper.feature  bc_reviewer_what_you_read_cli_naming.feature  bc_session_start_work_tracker_health_step.feature  bc_templates_write_mailbox_cli_naming.feature  bc_work_done_gate_check_refinements.feature  bootstrap_adopter_blocking_fixes.feature  bootstrap_bc_beads_remote_owner_substitution.feature  bootstrap_bc_functional_bd_dolt_remote.feature  bootstrap_bd_dolt_push_smoke_test.feature  bootstrap_bd_init_side_effects.feature  bootstrap_beads_config_sync_remote_and_prefix.feature  bootstrap_beads_remote_and_prefix.feature  bootstrap_beads_remote_single_source.feature  bootstrap_cli_surface.feature  bootstrap_cold_install_adopter_fixes.feature  bootstrap_env_example_run_credentials.feature  bootstrap_existing_beads_idempotent.feature  bootstrap_footing_launch_lead_image.feature  bootstrap_footing_launch_socket_group.feature  bootstrap_lead_ops_scaffolding.feature  bootstrap_lead_scenario_completion_ops_tool.feature  bootstrap_missing_shop_name.feature  bootstrap_no_top_level_agents_md.feature  bootstrap_ops_coordinates_artifact.feature  bootstrap_shop_shell_ca_guard.feature  bootstrap_shop_shell_cold_start_broker_fetch.feature  brief_003_event_driven_activation_and_settings_json_bootstrap.feature  (+91 more)
scripts/: check_tag_matches_pyproject_version.py
src/shop_templates/: __init__.py  __main__.py  bc_emit.py  cli.py  fabro_diagnostics.py
src/shop_templates/templates/: bc-implementer.md  bc-reviewer.md  gitignore.template  lead-architect.md  lead-pm.md  lead-po.md
src/shop_templates/templates/claude/: bc.md  lead.md
src/shop_templates/templates/claude_body/: lead.md
src/shop_templates/templates/claude_settings/: bc.json
src/shop_templates/templates/docs/runbooks/: beads-schema-skew-recovery.md  review-venv-import-integrity.md
src/shop_templates/templates/fabro/: dispatch_acp_agent.py  dispatcher.fabro  dispatcher.toml  project.toml  workflow.fabro  workflow.toml
src/shop_templates/templates/lead_skills/bring-up-bc/: SKILL.md
src/shop_templates/templates/lead_skills/create-bc/: SKILL.md
src/shop_templates/templates/lead_skills/discovery-dialogue/: SKILL.md
src/shop_templates/templates/lead_skills/option-tradeoff/: SKILL.md
src/shop_templates/templates/lead_skills/prioritization/: .provenance  SKILL.md
src/shop_templates/templates/lead_skills/problem-space-mapping/: SKILL.md
src/shop_templates/templates/lead_skills/product-narrative/: SKILL.md
src/shop_templates/templates/lead_skills/shaping/: SKILL.md
src/shop_templates/templates/ops/: .env.example  Dockerfile.shopsystem-shell  agent-vault-approve-claude  agent-vault-check  agent-vault-provision  compose.yaml  doctor  footing  ops-coordinates  shop-scenario-completion  shop-shell
src/shop_templates/templates/skills/bc-review/: SKILL.md
src/shop_templates/templates/starter/: .env.example  README.md  compose.yaml
tests/: _approve_claude_harness.py  _release_workflow.py  _respond_recorder.py  conftest.py  test_bc_emit_attribution_word_boundary.py  test_bc_emit_changed_feature_conformity.py  test_bc_emit_plan_decomposition.py  test_bc_emit_scenario_hash_blockify_conformity.py  test_bc_emit_scenario_hash_source_freshness.py  test_bc_emit_scenario_hash_workscope.py  test_bc_emit_scenarios_dependency.py  test_bc_health_step_fresh_zero_issue_cell.py  test_console_script_import_currency.py  test_docs_runbook_delivery.py  test_fabro_diagnostics_anchor.py  test_fabro_model_stylesheet_placeholder_retirement.py  test_fabro_projection_pour_emission_retirement.py  test_fabro_workflow_retry_and_diagnostic.py  test_features.py  test_lead_architect_pdr033.py  test_lead_architect_structurizr_workspace.py  test_lead_bootstrap_skips_fabro.py  test_lead_pm_skills.py  test_lead_pm_template.py  test_lead_po_activity_guidance.py  test_lead_po_anti_build_trap.py  test_lead_po_authoring_scenario_hash.py  test_lead_po_commitment_owner_identity.py  test_lead_po_empowered_pm_identity.py  test_lead_po_identity_precedes_procedure.py  test_lead_po_outcome_ownership_criterion.py  test_lead_po_pm_discipline_criteria.py  test_lead_po_pm_skill_catalogue.py  test_lead_po_post_pdr033_activities.py  test_lead_po_product_general_pm.py  test_lead_po_strategy_spec_criteria.py  test_lead_prime_directive_choice_suppression.py  test_lead_primer_effectively_empty_product_discovery.py  test_lead_primer_pdr033.py  test_lead_primer_pm_mode_body_load_on_entry.py  (+29 more)
(+11 files in other folders)
