[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shop-templates"
version = "0.12.0"
description = "Validated role-prompt templates for shops in the shop-system. Distributed as package data; consumed via the `shop-templates` CLI rather than read from a known filesystem path."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "David Stenglein"}]
dependencies = [
    # bc-emit's work-done hash-check path recomputes scenario hashes via
    # scenarios.hash.compute_scenario_hash. Declared VCS-pinned per the
    # ADR-018 install convention (the same form shopsystem-messaging uses) so
    # a clean `pip install shop-templates` into a launched BC resolves it.
    # The import is lazy (see bc_emit.py), so --help and other subcommands
    # work even before this resolves; this guarantees resolution for the
    # work-done hash path in real launched-BC installs.
    "scenarios @ git+https://github.com/dstengle/shopsystem-scenarios@v0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-bdd>=7",
    "gherkin-official",
]

[project.urls]
Repository = "https://github.com/dstengle/shopsystem-templates"
Homepage = "https://github.com/dstengle/shopsystem-product"

[project.scripts]
shop-templates = "shop_templates.cli:main"
bc-emit = "shop_templates.bc_emit:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shop_templates = [
    "templates/*.md",
    "templates/*.template",
    "templates/claude/*.md",
    "templates/claude_body/*.md",
    "templates/claude_settings/*.json",
    "templates/ops/*",
    # `templates/ops/*` does NOT match leading-dot files; the bootstrap path
    # (_render_lead_env_example) reads this dotfile, so ship it explicitly
    # rather than via a broad `templates/ops/.*` that could sweep stray
    # dotfiles (lead-llc1 / tmpl-263).
    "templates/ops/.env.example",
    "templates/skills/**/*",
]
