[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shop-templates"
version = "0.52.6"
description = "Validated role-prompt templates for shops in the shop-system. Distributed as package data; consumed via the `shop-templates` CLI rather than read from a known filesystem path."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "David Stenglein"}]
dependencies = [
    # bc-emit's work-done hash-check path recomputes scenario hashes via
    # scenarios.hash.compute_scenario_hash, and the ADR-056 enforcement surface
    # (the bin/doctor coherence gate + the bc-emit changed-feature
    # schema-conformity gate) uses the v0.3.1 `scenarios validate` / --aggregate
    # 3-dimension schema (@bc/@origin/@scenario_hash, @bc_internal exemption,
    # E_STRAY_GHERKIN guard). Declared VCS-pinned per the ADR-018 install
    # convention (the same form shopsystem-messaging uses) so a clean
    # `pip install shop-templates` into a launched BC resolves it. The import is
    # lazy (see bc_emit.py), so --help and other subcommands work even before
    # this resolves; this guarantees resolution for the work-done hash path in
    # real launched-BC installs.
    "scenarios @ git+https://github.com/dstengle/shopsystem-scenarios@v0.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-bdd>=7",
    "gherkin-official",
]

[project.urls]
Repository = "https://github.com/dstengle/shopsystem-templates"
Homepage = "https://github.com/dstengle/shopsystem-product"

[project.scripts]
shop-templates = "shop_templates.cli:main"
bc-emit = "shop_templates.bc_emit:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shop_templates = [
    "templates/*.md",
    "templates/*.template",
    "templates/claude/*.md",
    "templates/claude_body/*.md",
    "templates/claude_settings/*.json",
    "templates/ops/*",
    # `templates/ops/*` does NOT match leading-dot files; the bootstrap path
    # (_render_lead_env_example) reads this dotfile, so ship it explicitly
    # rather than via a broad `templates/ops/.*` that could sweep stray
    # dotfiles (lead-llc1 / tmpl-263).
    "templates/ops/.env.example",
    "templates/skills/**/*",
    # The canonical LEAD skill-group (bring-up-bc, create-bc). A distinct
    # package-data subtree from templates/skills/; lead bootstrap/update pour
    # it. Must ship in the sdist+wheel or lead shops pour an empty group
    # (lead-5mr5).
    "templates/lead_skills/**/*",
    # The per-skill `.provenance` marker (PDR-023, lead-vme1) is a leading-dot
    # file that `templates/lead_skills/**/*` does not match (same caveat as
    # templates/ops/.env.example); ship it explicitly so the canonical CANONICAL
    # markers for bring-up-bc + create-bc resolve from package data.
    "templates/lead_skills/**/.provenance",
    # The shopsystem-starter forkable-repo body — slimmed to README.md +
    # bin/bootstrap (lead-rs0i): compose.yaml / .env.example are no longer
    # carried by the starter; bin/bootstrap renders them in-container via
    # `shop-templates bootstrap`. The BC serves the starter body as package data
    # via iter_starter_files / read_starter_file (tmpl-3ch / lead-v0m7).
    "templates/starter/**/*",
    # The static .fabro/ fabro-engage topology skeleton (ADR-051, lead-7a8v):
    # workflow.fabro + project.toml + workflow.toml + vaults/default/secrets.json.
    # `_pour_fabro` reads these via iter_fabro_asset_files and pours them
    # verbatim into a launched shop's .fabro/, so they MUST ride in the
    # sdist+wheel or the pour emits an empty skeleton. Both the top-level and
    # the nested (vaults/default/) globs are declared so a fresh install carries
    # the whole tree (mirrors the templates/lead_skills/**/* nested-glob care).
    "templates/fabro/*",
    "templates/fabro/**/*",
    # The canonical docs subtree — shop-agnostic fleet documentation (runbooks
    # and the like) that ships to EVERY BC and is poured into the target's
    # docs/ by `_pour_docs` via iter_doc_files (lead-pq9ex). Must ride the
    # sdist+wheel or a real `pip install shop-templates` pours an empty docs
    # tree (the same lead-5mr5 lesson as the lead_skills subtree). Both the
    # top-level and nested globs are declared so the whole tree carries.
    "templates/docs/*",
    "templates/docs/**/*",
]
